@@ -98,6 +98,15 @@ class BalancedTest < Test::Unit::TestCase
     assert response.test?
   end
 
+  def test_bad_email
+    @gateway.stubs(:ssl_request).returns(failed_account_response_bad_email).then.returns(successful_card_response)
+
+    assert response = @gateway.purchase(@amount, @credit_card, @options)
+    assert_failure response
+    assert response.test?
+    assert_match /must be a valid email address/, response.message
+  end
+
   def test_unsuccessful_purchase
     @gateway.expects(:ssl_request).times(4).returns(
         successful_account_response
@@ -382,6 +391,23 @@ class BalancedTest < Test::Unit::TestCase
   },
   "request_id": "OHMc3f6135cd1fd11e19f1e026ba7e5e72e",
   "description": "Account with email address 'john.buyer@example.org' already exists. Your request id is OHMc3f6135cd1fd11e19f1e026ba7e5e72e."
+}
+    RESPONSE
+  end
+
+  def failed_account_response_bad_email
+    <<-RESPONSE
+{
+  "status": "Bad Request",
+  "category_code": "request",
+  "additional": null,
+  "status_code": 400,
+  "category_type": "request",
+  "extras": {
+    "email_address": "invalid_email must be a valid email address as specified by RFC-2822"
+  },
+  "request_id": "OHM417b4e7ad9e411e2893c026ba7c1aba6",
+  "description": "Invalid field [email_address] - invalid_email must be a valid email address as specified by RFC-2822 Your request id is OHM417b4e7ad9e411e2893c026ba7c1aba6."
 }
     RESPONSE
   end
